--- a/css/main.css
+++ b/css/main.css
@@ -663,6 +663,10 @@ input[type=button] {
     width: 45%;
   }
 
+  .map figure {
+    padding-bottom: 45.5%;
+  }
+
   .content-section .content-wrapper h2 {
     width: 80%;
   }
@@ -773,7 +777,11 @@ input[type=button] {
    About Page
    ========================================================================== */
    
-  .mission h2, 
+   .map figure {
+    padding-bottom: 125%;
+  }
+ 
+   .mission h2, 
   .contact-section .content-wrapper h2 {
     width: 95%;
     font-size: 3em;
