--- a/css/main.css
+++ b/css/main.css
@@ -88,65 +88,68 @@ textarea {
    ========================================================================== */
 
 /* General Styles */
-
+ 
 html {
-  font-size: 16px;
+	font-size: 16px;
 }
-
+ 
 body {
-  font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
   color: #e2e3ed;
   text-align: left;
 }
-
-ul,
+ 
+ul, 
 ol {
   list-style-type: none;
+  margin: 0;
 }
-
+ 
 a {
   color: #e2e3ed;
   text-decoration: none;
 }
-
+ 
 h2 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.875em;
   font-weight: 500;
+  font-size: 1.875em;
+  margin: 0;
 }
-
-h3,
+ 
+h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
-  margin: 20px 0;
   font-size: 1.125em;
+  margin: 20px 0;
 }
-
+ 
 p {
   font-size: .875em;
   line-height: 1.285;
 }
-
+ 
 img {
-  width: 100%;
+ width: 100%;
 }
-
+ 
 figure {
-  margin: 0;
+ margin: 0;
 }
-
+ 
 address {
-  font-style: normal;
+ font-style: normal;
 }
-
+ 
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
 
-   /*-------------- Base Header - Footer Styles ------------- */
+/* -------------------- Base Header - Footer Styles -------------------- */
+
 header,
 footer {
   background-color: #202322;
@@ -161,11 +164,11 @@ header {
 }
 
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;
 }
 
 header figure {
@@ -177,27 +180,27 @@ header figure {
 }
 
 .header-divider {
-  background: #3a3a3a;
-  width: 100%;
+  background: #3a3a3a; 
   height: 1px;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
 
 header nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-flow: row wrap;
   width: 60%;
   font-size: 1.125em;
   font-weight: 700;
   text-transform: uppercase;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header nav ul {
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
 }
 
 header nav ul li {
@@ -205,8 +208,8 @@ header nav ul li {
 }
 
 footer {
-  flex-direction: column;
   text-align: center;
+  flex-direction: column;
 }
 
 footer p {
@@ -238,6 +241,10 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .social-icons p i {
+  font-size: 1.3125em;
+}
+
 footer .copyright {
   margin: 20px 0;
 }
@@ -258,9 +265,9 @@ footer .copyright {
 
 .hero-area h1 {
   font-size: 2.25em;
-  font-family: 'Poppins', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  line-height: 1.2;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif; 
+  font-weight: 500; 
+  line-height: 1.2; 
 }
 
 /* Aside */
@@ -319,7 +326,7 @@ input[type=button] {
   margin: 30px 0;
 }
 
-.features .feature-items {
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -359,74 +366,78 @@ input[type=button] {
    About Page
    ========================================================================== */
 
-.mission {
-  background-color: #527158;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.map figure {
-  width: 100%;
-  height: 0;
-  padding-bottom: 125%;
-  overflow: hidden;
-  position: relative;
-}
-
-.map iframe {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.contact-section {
-  background-color: #2a423a;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.contact-contact p {
-  margin: 0;
-}
+   .mission {
+    background-color: #527158;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .map figure {
+    width: 100%;
+    height: 0; 
+    padding-bottom: 125%; 
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+  }
+  
+  .contact-section {
+    background-color: #2a423a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .contact-content p {
+    margin: 0;
+  }
 
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
 
-.faq {
-  background-color: #527158;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.faq .content-wrapper {
-  margin: 50px 0 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.faq h2 {
-  margin-bottom: 40px;
-  line-height: 1;
-}
-
-.faq-content {
-  margin-bottom: 50px;
-}
-
-.faq-content h4 {
-  line-height: 1.333;
-}
+   .faq {
+    background-color: #527158;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .faq .content-wrapper {
+    margin: 50px 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .faq h2 {
+    margin-bottom: 40px;
+    line-height: 1;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
+  }
+  
+  .faq-content h4 {
+    line-height: 1.333;
+  }
 
 /* ==========================================================================
    Helper classes
@@ -516,146 +527,152 @@ input[type=button] {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 768px) {
-  /* Tablet styles here */
-
-  /* General styles */
-  .content-wrapper {
-    max-width: 640px;
-    margin: 100px 0;
-  }
-
-  h2 {
-    font-size: 2.25em;
-    line-height: 1.333;
-  }
-
-  h3 {
-    font-size: 1.5em;
-    line-height: 1.25;
-  }
-
-  /* Header */
-  header {
-    justify-content: space-around;
-    padding: 33px 0;
-  }
-
-  header .content-wrapper {
-    width: 100%;
-    justify-content: space-between;
-  }
-
-  header figure {
-    width: 30%;
-  }
-
-  header nav {
-    width: 20%;
-  }
-
-  header nav ul {
-    justify-content: space-between;
-  }
-
-  .header-divider {
-    display: none;
-  }
-
-  /* Hero Area */
-  .hero-area {
-    min-height: 600px;
+   @media only screen and (min-width:768px) {
+    /*Tablet styles here*/
+  
+    /* General styles */
+    .content-wrapper {
+      max-width: 640px;
+      margin: 100px 0;
+    }
+        
+    h2 {
+      font-size: 2.25em;
+      line-height: 1.333;
+    }
+  
+    h3 {
+        font-size: 1.5em;
+        line-height: 1.25;
+    }
+  
+    /* Header */
+    header {
+      justify-content: space-around;
+      padding: 33px 0;
+    }
+  
+    header .content-wrapper {
+      width: 100%;
+      justify-content: space-between;
+    }
+  
+    header figure {
+      width: 30%;
+    }
+  
+    header nav {
+      width: 20%;
+    }
+  
+    header nav ul {
+      justify-content: space-between;
+    }
+  
+    .header-divider {
+      display: none;
+    }
+    /* Hero Area */
+  
+    .hero-area {
+      min-height: 600px;
+    }  
+  
+    .hero-area h1 {
+      font-size: 3em;
+      line-height: 1;
+      margin: 0;
   }
   
-  .hero-area h1 {
-    font-size: 3em;
-    line-height: 1;
-    margin: 0;
-  }
-
-  /* Aside */
-
-  aside .content-wrapper {
-    margin: 50px 0;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-  }
-
-  aside .content-wrapper .form-description, 
-  aside .content-wrapper .form {
-    width: 40%;
-    margin: 0;
-  }
-
-  /* Features */
-
-  .features h2 {
-    margin-bottom: 20px;
-  }
-
-  .features article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    flex-basis: 50%;
-  }
-
-  .features .features-item-description {
-    width: 62%;
-  }
-
-  /* Reviews */
-
-  .reviews article {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .reviews h2 {
-    width: 85%;
-  }
-
-  .reviews article div {
-    width: 49%;
-  }
-
-  .reviews h3 {
-    width: 75%;
-    margin: 0;
-  }
-
-  /* Footer */
-
-  footer .content-wrapper {
-    width: 65%;
-    margin: 100px 0;
-  }
-
-  footer .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-  }
-
-  footer .contact {
-    margin-bottom: 0;
-  }
-
-  footer h4 {
-    font-size: 1.5em;
-    margin-bottom: 40px;
-  }
-
-  footer p {
-    line-height: 1.285;
-  }
-
-  footer .copyright {
-    width: 100%;
-  }
+    /* Aside */
+    aside .content-wrapper {
+      margin: 50px 0;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+    }
+  
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 40%;
+      margin: 0;
+    }
+  
+    /* Features */
+  
+    .features h2 {
+      margin-bottom: 20px;
+    }
+  
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: column wrap;
+      flex-basis: 50%;
+    }
+    
+    .features .features-item-description {
+      width: 62%;
+    }
+  
+    .features i {
+      margin-bottom: 30px;
+    }
+  
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .reviews h2 {
+      width: 85%;
+    }
+  
+    .reviews article figure,
+    .reviews article div {
+      width: 49%;
+    }
+  
+    .reviews h3 {
+      width: 75%;
+      margin: 0;
+    }
+    /* Footer */
+    footer .content-wrapper {
+      width: 65%;
+      margin: 100px 0;
+    }
+  
+    footer .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+    }
+  
+    footer .contact {
+      margin-bottom: 0;
+    }
+  
+    footer h4 {
+      font-size: 1.5em;
+      margin-bottom: 40px;
+    }
+  
+    footer p {
+        line-height: 1.285;
+    }
+  
+    footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
+    }
+    
+    footer .copyright {
+      width: 100%;
+    }
 
     /* ==========================================================================
    About Page
@@ -676,7 +693,7 @@ input[type=button] {
     padding-bottom: 45.5%;
   }
 
-  .content-section .content-wrapper h2 {
+  .contact-section .content-wrapper h2 {
     width: 80%;
   }
 
@@ -697,103 +714,104 @@ input[type=button] {
   .faq .content-wrapper {
     justify-content: space-between;
   }
-
+  
   .faq-content {
     flex-basis: 45%;
   }
-
+  
   .faq h2 {
     width: 100%;
   }
-
+  
   .faq h4,
   .faq p {
     font-size: .875em;
     line-height: 1.125;
   }
-}
-
-
-@media only screen and (min-width: 1200px) {
-  /*Desktop styles here */
-
-  header {
-    padding: 15px 0;
   }
+
+
+  @media only screen and (min-width:1200px) {
+    /*Desktop styles here*/
   
-  .content-wrapper {
-    max-width: 960px;
-  }
-
-  h2 {
-    font-size: 2.25em;
-  }
-
-  h3,
-  h4 {
-    font-size: 1.875em;
-  }
-
-  p {
-    font-size: 1.125em;
-    line-height: 1.333;
-  }
-
-  /* Hero */
-  .hero-area h1 {
-    font-size: 3.75em;
-    width: 80%;
-  }
-
-  /* Aside */
-  aside .content-wrapper {
-    justify-content: space-around;
-  }
-
-  aside .content-wrapper .form-description,
-  aside .content-wrapper .form {
-    width: 30%;
-  }
-
-  .form-description p {
-    font-size: 1.125em;
-  }
-
-  /* Features */
-  .features h2 {
-    width: 90%;
-  }
-
-  .features article {
-    flex-basis: 33%;
-  }
-
-  /* Reviews */
-
-  .reviews article div {
-    width: 42%;
-  }
+    header {
+      padding: 15px 0;
+    }
   
-  .reviews h2 {
-    padding-bottom: 50px;
-  }
-
-  footer h4 {
-    font-size: 1.875em;
-  }
+    .content-wrapper {
+      max-width: 960px;
+    }
+  
+    h2 {
+      font-size: 2.25em;
+    }
+  
+    h3,
+    h4 {
+        font-size: 1.875em;
+    }
+  
+    p {
+        font-size: 1.125em;
+        line-height: 1.333;
+    }
+  
+    /* Hero */
+    .hero-area h1 {
+      font-size: 3.75em;
+      width: 80%;
+    }
+  
+    /* Aside */
+    aside .content-wrapper {
+      justify-content: space-around;
+    }
+  
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 30%;
+    }
+  
+    .form-description p {
+      font-size: 1.125em;
+    }
+  
+    /* Features */
+  
+    .features h2 {
+      width: 90%;
+    }
+  
+    .features article {
+      flex-basis: 33%;
+    }
+    
+    /* Reviews */
+  
+    .reviews h2 {
+      padding-bottom: 50px; 
+    }
+    
+    .reviews article div {
+      width: 42%;
+    }
+  
+    footer h4 {
+      font-size: 1.875em;
+    }
 
 /* ==========================================================================
    About Page
    ========================================================================== */
    
    .map figure {
-    padding-bottom: 125%;
+    padding-bottom: 37.5%;
   }
- 
-   .mission h2, 
+
+  .mission h2,
   .contact-section .content-wrapper h2 {
-    width: 95%;
-    font-size: 3em;
+      width: 95%;
+      font-size: 3em;
   }
 
   .contact-content h4 {
@@ -808,13 +826,12 @@ input[type=button] {
     width: 100%;
     font-size: 3em;
   }
-
+      
   .faq h4,
   .faq p {
     font-size: 1.125em;
     line-height: 1;
   }
-  
 }
 
 
